--- a/result/2020-02-28 15_21_52_result.html
+++ b/result/2020-02-28 15_21_52_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-28 12:14:28</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:34.147133</p>
-<p class='attribute'><strong>状态:</strong> 通过 27 失败 8 错误 1</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-28 15:21:53</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:57.710174</p>
+<p class='attribute'><strong>状态:</strong> 通过 28 失败 8</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -214,27 +214,15 @@
     <tr class='failClass'>
         <td>case.case_children_garten_interview.KindergartenInterviewTest</td>
         <td>7</td>
-        <td>4</td>
-        <td>3</td>
+        <td>5</td>
+        <td>2</td>
         <td>0</td>
         <td><a href="javascript:showClassDetail('c1',7)">详情</a></td>
     </tr>
 
-<tr id='ft1.1' class='none'>
-    <td class='failCase'><div class='testcase'>test_add_interview_data_by_correct_parmas</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.1')" >
-        失败</a>
-    <div id='div_ft1.1' class="popup_window">
-        <pre>ft1.1: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_garten_interview.py", line 66, in test_add_interview_data_by_correct_parmas
-    self.assertTrue(rj == 'success', msg=m)
-AssertionError: False is not true : 该小朋友还没有选定对口园
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+<tr id='pt1.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_add_interview_data_by_correct_parmas</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.2' class='hiddenRow'>
@@ -255,9 +243,9 @@ AssertionError: False is not true : 该小朋友还没有选定对口园
         失败</a>
     <div id='div_ft1.4' class="popup_window">
         <pre>ft1.4: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_garten_interview.py", line 80, in test_child_registration_confirm_by_correct_child_id
-    self.assertTrue(rj == 'success', msg=m)
-AssertionError: False is not true : 更新时间不能为空
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_garten_interview.py", line 73, in test_child_registration_confirm_by_correct_child_id
+    self.assertTrue(rj == 'success', msg=r.text)
+AssertionError: False is not true : {"message":"更新时间不能为空","status":"error"}
 </pre>
     </div>
     <!--css div popup end-->
@@ -282,9 +270,9 @@ AssertionError: False is not true : 更新时间不能为空
         失败</a>
     <div id='div_ft1.7' class="popup_window">
         <pre>ft1.7: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_garten_interview.py", line 38, in test_garten_interview_date_list_by_invalid_child_id
-    self.assertTrue(rj == 'error', msg=m)
-AssertionError: False is not true : 查询成功
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_garten_interview.py", line 37, in test_garten_interview_date_list_by_invalid_child_id
+    self.assertTrue(rj == 'error', msg=r.text)
+AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
 </pre>
     </div>
     <!--css div popup end-->
@@ -348,7 +336,7 @@ AssertionError: False is not true : 查询成功
         失败</a>
     <div id='div_ft2.9' class="popup_window">
         <pre>ft2.9: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 36, in test_get_child_list_by_invalid_family_id
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 36, in test_get_child_list_by_invalid_family_id
     self.assertTrue(rj == 'error', msg=m)
 AssertionError: False is not true : 查询成功
 </pre>
@@ -367,18 +355,30 @@ AssertionError: False is not true : 查询成功
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-    <tr class='errorClass'>
+    <tr class='failClass'>
         <td>case.case_children_registration.ChildRegistrationTest</td>
         <td>7</td>
-        <td>6</td>
+        <td>5</td>
+        <td>2</td>
         <td>0</td>
-        <td>1</td>
         <td><a href="javascript:showClassDetail('c3',7)">详情</a></td>
     </tr>
 
-<tr id='pt3.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_registration_with_correct_params</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft3.1' class='none'>
+    <td class='failCase'><div class='testcase'>test_child_registration_with_correct_params</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft3.1')" >
+        失败</a>
+    <div id='div_ft3.1' class="popup_window">
+        <pre>ft3.1: Traceback (most recent call last):
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_registration.py", line 67, in test_child_registration_with_correct_params
+    self.assertTrue(rj == 'success', msg=r.text)
+AssertionError: False is not true : {"message":"对口园不存在","status":"error"}
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
 <tr id='pt3.2' class='hiddenRow'>
@@ -396,26 +396,26 @@ AssertionError: False is not true : 查询成功
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt3.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_garten_list_by_invalid_type</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='ft3.6' class='none'>
-    <td class='errorCase'><div class='testcase'>test_search_registraion_info_with_correct_params</div></td>
+<tr id='ft3.5' class='none'>
+    <td class='failCase'><div class='testcase'>test_garten_list_by_invalid_type</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft3.6')" >
-        错误</a>
-    <div id='div_ft3.6' class="popup_window">
-        <pre>ft3.6: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_registration.py", line 77, in test_search_registraion_info_with_correct_params
-    dic=r.json()['data']
-KeyError: 'data'
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft3.5')" >
+        失败</a>
+    <div id='div_ft3.5' class="popup_window">
+        <pre>ft3.5: Traceback (most recent call last):
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_registration.py", line 44, in test_garten_list_by_invalid_type
+    self.assertTrue(rj == 'error', msg=r.text)
+AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
 </pre>
     </div>
     <!--css div popup end-->
     </td>
+</tr>
+
+<tr id='pt3.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_search_registraion_info_with_correct_params</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt3.7' class='hiddenRow'>
@@ -423,30 +423,18 @@ KeyError: 'data'
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-    <tr class='failClass'>
+    <tr class='passClass'>
         <td>case.case_login.LoginTest</td>
         <td>4</td>
-        <td>3</td>
-        <td>1</td>
+        <td>4</td>
+        <td>0</td>
         <td>0</td>
         <td><a href="javascript:showClassDetail('c4',4)">详情</a></td>
     </tr>
 
-<tr id='ft4.1' class='none'>
-    <td class='failCase'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft4.1')" >
-        失败</a>
-    <div id='div_ft4.1' class="popup_window">
-        <pre>ft4.1: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 36, in test_child_login_with_correct_account
-    self.assertTrue(rd == 'error')
-AssertionError: False is not true
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+<tr id='pt4.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt4.2' class='hiddenRow'>
@@ -460,7 +448,7 @@ AssertionError: False is not true
 </tr>
 
 <tr id='pt4.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td class='none'><div class='testcase'>test_read_policy_with_invalid_param</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
@@ -486,7 +474,7 @@ AssertionError: False is not true
         失败</a>
     <div id='div_ft5.2' class="popup_window">
         <pre>ft5.2: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_parent_info.py", line 57, in test_edit_parent_info_with_invalid_param
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 57, in test_edit_parent_info_with_invalid_param
     self.assertTrue(dic[k]['rj'] == "error", msg=dic[k]['msg'])
 AssertionError: False is not true : property:id  message:操作成功
 </pre>
@@ -503,7 +491,7 @@ AssertionError: False is not true : property:id  message:操作成功
         失败</a>
     <div id='div_ft5.3' class="popup_window">
         <pre>ft5.3: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_parent_info.py", line 67, in test_edit_parent_info_with_logic_issue_param
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 67, in test_edit_parent_info_with_logic_issue_param
     self.assertTrue(rj == 'error', msg=r.text)
 AssertionError: False is not true : {"message":"操作成功","status":"success"}
 </pre>
@@ -525,7 +513,7 @@ AssertionError: False is not true : {"message":"操作成功","status":"success"
         失败</a>
     <div id='div_ft5.5' class="popup_window">
         <pre>ft5.5: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_parent_info.py", line 45, in test_search_parent_list_by_invalid_child_Id
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 45, in test_search_parent_list_by_invalid_child_Id
     self.assertTrue(rj == 'error', msg=r.text)
 AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
 </pre>
@@ -547,9 +535,9 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
         <tr id='total_row'>
             <td>总计</td>
             <td>36</td>
-            <td>27</td>
+            <td>28</td>
             <td>8</td>
-            <td>1</td>
+            <td>0</td>
             <td>&nbsp;</td>
         </tr>
     </table>
@@ -582,9 +570,9 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:27, name:'通过'},
+                        {value:28, name:'通过'},
                         {value:8, name:'失败'},
-                        {value:1, name:'错误'}
+                        {value:0, name:'错误'}
                     ],
                     itemStyle: {
                         emphasis: {
