--- a/result/2020-03-05 11_52_43_result.html
+++ b/result/2020-03-05 11_52_43_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-28 15:21:53</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:57.710174</p>
-<p class='attribute'><strong>状态:</strong> 通过 28 失败 8</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-03-05 11:52:43</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:40.299871</p>
+<p class='attribute'><strong>状态:</strong> 通过 30 失败 6</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -243,9 +243,9 @@
         失败</a>
     <div id='div_ft1.4' class="popup_window">
         <pre>ft1.4: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_garten_interview.py", line 73, in test_child_registration_confirm_by_correct_child_id
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_garten_interview.py", line 73, in test_child_registration_confirm_by_correct_child_id
     self.assertTrue(rj == 'success', msg=r.text)
-AssertionError: False is not true : {"message":"更新时间不能为空","status":"error"}
+AssertionError: False is not true : {"message":"确认数据已发生变化，请回到第一步重新开始数据填报。","status":"error"}
 </pre>
     </div>
     <!--css div popup end-->
@@ -270,7 +270,7 @@ AssertionError: False is not true : {"message":"更新时间不能为空","statu
         失败</a>
     <div id='div_ft1.7' class="popup_window">
         <pre>ft1.7: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_garten_interview.py", line 37, in test_garten_interview_date_list_by_invalid_child_id
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_garten_interview.py", line 37, in test_garten_interview_date_list_by_invalid_child_id
     self.assertTrue(rj == 'error', msg=r.text)
 AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
 </pre>
@@ -336,7 +336,7 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
         失败</a>
     <div id='div_ft2.9' class="popup_window">
         <pre>ft2.9: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 36, in test_get_child_list_by_invalid_family_id
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 36, in test_get_child_list_by_invalid_family_id
     self.assertTrue(rj == 'error', msg=m)
 AssertionError: False is not true : 查询成功
 </pre>
@@ -358,27 +358,15 @@ AssertionError: False is not true : 查询成功
     <tr class='failClass'>
         <td>case.case_children_registration.ChildRegistrationTest</td>
         <td>7</td>
-        <td>5</td>
-        <td>2</td>
+        <td>6</td>
+        <td>1</td>
         <td>0</td>
         <td><a href="javascript:showClassDetail('c3',7)">详情</a></td>
     </tr>
 
-<tr id='ft3.1' class='none'>
-    <td class='failCase'><div class='testcase'>test_child_registration_with_correct_params</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft3.1')" >
-        失败</a>
-    <div id='div_ft3.1' class="popup_window">
-        <pre>ft3.1: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_registration.py", line 67, in test_child_registration_with_correct_params
-    self.assertTrue(rj == 'success', msg=r.text)
-AssertionError: False is not true : {"message":"对口园不存在","status":"error"}
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+<tr id='pt3.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_registration_with_correct_params</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt3.2' class='hiddenRow'>
@@ -388,7 +376,29 @@ AssertionError: False is not true : {"message":"对口园不存在","status":"er
 
 <tr id='pt3.3' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list_by_correct_id_and_type</div></td>
-    <td colspan='5' align='center'>通过</td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.3')" >
+        通过</a>
+    <div id='div_pt3.3' class="popup_window">
+        <pre>pt3.3: jwdm
+updateuserid
+schoolcode
+deletedtime
+schoolname
+dkxxdm
+jddm
+jwmc
+deleteduserid
+deleted
+addtime
+adduserid
+id
+updatetime
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
 <tr id='pt3.4' class='hiddenRow'>
@@ -404,9 +414,9 @@ AssertionError: False is not true : {"message":"对口园不存在","status":"er
         失败</a>
     <div id='div_ft3.5' class="popup_window">
         <pre>ft3.5: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_registration.py", line 44, in test_garten_list_by_invalid_type
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_registration.py", line 44, in test_garten_list_by_invalid_type
     self.assertTrue(rj == 'error', msg=r.text)
-AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
+AssertionError: False is not true : {"data":[{"jwdm":"01013003","updateuserid":"","schoolcode":"1101701","deletedtime":"","schoolname":"上海市浦东新区龚路幼儿园龚华部","dkxxdm":"1101701","jddm":"01013","jwmc":"北京居委","deleteduserid":"","deleted":"0","addtime":"","adduserid":"","id":"4f9d3f9f-52cb-11ea-8b0b-0242ac110002","updatetime":""}],"message":"查询成功","status":"success"}
 </pre>
     </div>
     <!--css div popup end-->
@@ -415,7 +425,28 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
 
 <tr id='pt3.6' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_search_registraion_info_with_correct_params</div></td>
-    <td colspan='5' align='center'>通过</td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.6')" >
+        通过</a>
+    <div id='div_pt3.6' class="popup_window">
+        <pre>pt3.6: id
+bmxx
+bh
+bmsj
+mssj
+schoolname
+fplx
+bmqx
+updatetime
+hjxx
+bmid
+msjg
+bmbj
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
 <tr id='pt3.7' class='hiddenRow'>
@@ -455,8 +486,8 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
     <tr class='failClass'>
         <td>case.case_parent_info.ParentInfoTest</td>
         <td>7</td>
-        <td>4</td>
-        <td>3</td>
+        <td>5</td>
+        <td>2</td>
         <td>0</td>
         <td><a href="javascript:showClassDetail('c5',7)">详情</a></td>
     </tr>
@@ -466,21 +497,9 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='ft5.2' class='none'>
-    <td class='failCase'><div class='testcase'>test_edit_parent_info_with_invalid_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft5.2')" >
-        失败</a>
-    <div id='div_ft5.2' class="popup_window">
-        <pre>ft5.2: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 57, in test_edit_parent_info_with_invalid_param
-    self.assertTrue(dic[k]['rj'] == "error", msg=dic[k]['msg'])
-AssertionError: False is not true : property:id  message:操作成功
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+<tr id='pt5.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_edit_parent_info_with_invalid_param</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='ft5.3' class='none'>
@@ -491,7 +510,7 @@ AssertionError: False is not true : property:id  message:操作成功
         失败</a>
     <div id='div_ft5.3' class="popup_window">
         <pre>ft5.3: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 67, in test_edit_parent_info_with_logic_issue_param
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_parent_info.py", line 67, in test_edit_parent_info_with_logic_issue_param
     self.assertTrue(rj == 'error', msg=r.text)
 AssertionError: False is not true : {"message":"操作成功","status":"success"}
 </pre>
@@ -513,7 +532,7 @@ AssertionError: False is not true : {"message":"操作成功","status":"success"
         失败</a>
     <div id='div_ft5.5' class="popup_window">
         <pre>ft5.5: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_parent_info.py", line 45, in test_search_parent_list_by_invalid_child_Id
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_parent_info.py", line 45, in test_search_parent_list_by_invalid_child_Id
     self.assertTrue(rj == 'error', msg=r.text)
 AssertionError: False is not true : {"data":[],"message":"查询成功","status":"success"}
 </pre>
@@ -535,8 +554,8 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
         <tr id='total_row'>
             <td>总计</td>
             <td>36</td>
-            <td>28</td>
-            <td>8</td>
+            <td>30</td>
+            <td>6</td>
             <td>0</td>
             <td>&nbsp;</td>
         </tr>
@@ -570,8 +589,8 @@ AssertionError: False is not true : {"data":[],"message":"查询成功","status"
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:28, name:'通过'},
-                        {value:8, name:'失败'},
+                        {value:30, name:'通过'},
+                        {value:6, name:'失败'},
                         {value:0, name:'错误'}
                     ],
                     itemStyle: {
